--- a/s6_runner.ipynb
+++ b/s6_runner.ipynb
@@ -5,7 +5,21 @@
    "execution_count": 1,
    "id": "e7ca4177",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'selective_scan_cuda'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01ms6_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodels\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MambaVisionBase\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documentos/lucas-benedetti/03-mamba-models/pdi-mamba/core/matchers/SelectiveSSM/s6_core/models.py:7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpathlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01meinops\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m rearrange, repeat\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01ms6_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mselective_scan_interface\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m selective_scan_fn\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mMambaVisionBase\u001b[39;00m(nn.Module):\n\u001b[32m     10\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\n\u001b[32m     11\u001b[39m         \u001b[38;5;28mself\u001b[39m,\n\u001b[32m     12\u001b[39m         d_model,\n\u001b[32m   (...)\u001b[39m\u001b[32m     27\u001b[39m         dtype=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m     28\u001b[39m     ):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documentos/lucas-benedetti/03-mamba-models/pdi-mamba/core/matchers/SelectiveSSM/s6_core/selective_scan_interface.py:20\u001b[39m\n\u001b[32m     16\u001b[39m     causal_conv1d_update_function = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlayer_norm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m _layer_norm_fwd\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mselective_scan_cuda\u001b[39;00m\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mSelectiveScanFn\u001b[39;00m(torch.autograd.Function):\n\u001b[32m     25\u001b[39m     \u001b[38;5;129m@staticmethod\u001b[39m\n\u001b[32m     26\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mforward\u001b[39m(ctx, u, delta, A, B, C, D=\u001b[38;5;28;01mNone\u001b[39;00m, z=\u001b[38;5;28;01mNone\u001b[39;00m, delta_bias=\u001b[38;5;28;01mNone\u001b[39;00m, delta_softplus=\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m     27\u001b[39m                 return_last_state=\u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'selective_scan_cuda'"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from s6_core.models import MambaVisionBase"
@@ -54,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mamba-models",
+   "display_name": "mbm",
    "language": "python",
    "name": "python3"
   },
@@ -68,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
